Remove obsolete add-opens from build.gradle